<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f6f6f6">

    <include
        android:id="@+id/title_layout"
        layout="@layout/layout_ole_title"/>


    <LinearLayout
        android:id="@+id/help_layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w80"
        android:layout_marginTop="@dimen/w20"
        android:paddingTop="@dimen/w1"
        android:paddingBottom="@dimen/w1"
        android:layout_below="@+id/title_layout"
        android:orientation="horizontal"
        android:background="@color/d_dbdbdb">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/w1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/c_f6f6f6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/help_vip"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_bzhy"
                android:drawablePadding="@dimen/w6"
                style="@style/helpTvItemStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/w1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/w1"
                android:text="@string/help_account"
                style="@style/helpTvItemStyle" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_jifen"
                style="@style/helpTvItemStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/w1"
                android:text="@string/help_level"
                style="@style/helpTvItemStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text=""
                style="@style/helpTvItemStyle"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_layout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w80"
        android:layout_marginTop="@dimen/w10"
        android:paddingTop="@dimen/w1"
        android:paddingBottom="@dimen/w1"
        android:layout_below="@+id/help_layout1"
        android:orientation="horizontal"
        android:background="@color/d_dbdbdb">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/w1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/c_f6f6f6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/help_buy"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_bzgm"
                android:drawablePadding="@dimen/w6"
                style="@style/helpTvItemStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/w1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/w1"
                android:text="@string/help_deal"
                style="@style/helpTvItemStyle" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_buyFlow"
                style="@style/helpTvItemStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/w1"
                android:text="@string/help_operate"
                style="@style/helpTvItemStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_report"
                style="@style/helpTvItemStyle"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_layout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w80"
        android:layout_marginTop="@dimen/w10"
        android:paddingTop="@dimen/w1"
        android:paddingBottom="@dimen/w1"
        android:layout_below="@+id/help_layout2"
        android:orientation="horizontal"
        android:background="@color/d_dbdbdb">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/w1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/c_f6f6f6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/help_order"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_bzdd"
                android:drawablePadding="@dimen/w6"
                style="@style/helpTvItemStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/w1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/w1"
                android:text="@string/help_orderQuery"
                style="@style/helpTvItemStyle" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_explain"
                style="@style/helpTvItemStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/w1"
                android:text="@string/help_orderCancel"
                style="@style/helpTvItemStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_billQuestion"
                style="@style/helpTvItemStyle"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/help_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp20"
        android:layout_below="@+id/help_layout3"
        android:text="@string/help_hint"
        android:textSize="@dimen/sp14"
        android:textColor="@color/c_666666"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/w50"
        android:layout_below="@+id/help_hint"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/help_call"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_call"
            android:drawableTop="@drawable/help_call_selector"
            android:drawablePadding="@dimen/w10" />

        <TextView
            android:id="@+id/help_words"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_words"
            android:drawableTop="@drawable/help_words_selector"
            android:drawablePadding="@dimen/w10"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sp20"
        android:layout_alignParentBottom="true"
        android:text="@string/help_serviceTime"
        android:textSize="@dimen/sp14"
        android:textColor="@color/c_666666"
        android:gravity="center"/>
</RelativeLayout>